--- a/001 Администрирование/007 Репликация/Logical replication/Practice/001 Добавление новой таблицы в публикацию.md
+++ b/001 Администрирование/007 Репликация/Logical replication/Practice/001 Добавление новой таблицы в публикацию.md
@@ -1,3 +1,7 @@
+> добавить сюда
+> CREATE PUBLICATION flink_cdctest_pub FOR TABLE dbo.constants WITH (publish = 'insert, update, delete, truncate');
+> новую таблицу
+
 Чтобы добавить ещё одну таблицу в существующую публикацию, используйте команду `ALTER PUBLICATION`:
 
 ## 📝 Добавление новой таблицы в публикацию
