--- a/001 Администрирование/007 Репликация/Logical replication/Матчасть/Slot vs publication vs subscription/004 Что происходит при удалении слота.md
+++ b/001 Администрирование/007 Репликация/Logical replication/Матчасть/Slot vs publication vs subscription/004 Что происходит при удалении слота.md
@@ -1,4 +1,4 @@
-**Да, всё верно!** Если вы удалите слот репликации (`pg_drop_replication_slot`), **отставание немедленно прекратится, и WAL-файлы начнут нормально очищаться**.
+Если вы удалите слот репликации (`pg_drop_replication_slot`), **отставание немедленно прекратится, и WAL-файлы начнут нормально очищаться**.
 
 ## 🔄 Что происходит при удалении слота:
 
