Update 006 Конфигурирование слотов и публикаций в варианте ресурсного разделения подписок.md

--- a/001 Администрирование/007 Репликация/Logical replication/Матчасть/Slot vs publication vs subscription/006 Конфигурирование слотов и публикаций в варианте ресурсного разделения подписок.md
+++ b/001 Администрирование/007 Репликация/Logical replication/Матчасть/Slot vs publication vs subscription/006 Конфигурирование слотов и публикаций в варианте ресурсного разделения подписок.md
@@ -1,3 +1,4 @@
+# Конфигурирование слотов и публикаций в варианте ресурсного разделения подписок
 > разобрался с репликацией посгреса и выяснил что:
 > - можно увидеть отставание слота, но нельзя явно и просто понять, что именно внутри слота вызвало отставание
 > - на один слот можно сделать только одну подписку
