Update 006 Конфигурирование слотов и публикаций в варианте ресурсного разделения подписок.md

--- a/001 Администрирование/007 Репликация/Logical replication/Матчасть/Slot vs publication vs subscription/006 Конфигурирование слотов и публикаций в варианте ресурсного разделения подписок.md
+++ b/001 Администрирование/007 Репликация/Logical replication/Матчасть/Slot vs publication vs subscription/006 Конфигурирование слотов и публикаций в варианте ресурсного разделения подписок.md
@@ -7,7 +7,7 @@
 > - удаление подписки не всегда вызывает удаление слота
 > - удаление подписки без удаления слота не прервет отставание слота
 > - только удаление зависшего слота может остановить рост wal
-> - нельзя сделать две и более подписок на один слот
+> - нельзя сделать две и более подписок через один слот
 >   
 >   вопрос в следующем
 >   вот я создал публикацию в посгресе (это точно нужно делать? дебезиум или флинк точно не делают это автоматически, если не сделать самому руками?)
