--- a/001 Администрирование/007 Репликация/Logical replication/Матчасть/Slot vs publication vs subscription/006 Конфигурирование слотов и публикаций в варианте ресурсного разделения подписок.md
+++ b/001 Администрирование/007 Репликация/Logical replication/Матчасть/Slot vs publication vs subscription/006 Конфигурирование слотов и публикаций в варианте ресурсного разделения подписок.md
@@ -28,7 +28,7 @@
 
 Вы абсолютно правы во всех ваших выводах о работе слотов и публикаций в PostgreSQL. Вы попали в самую суть проблемы репликации. Давайте разберем это по полочкам.
 
-### 🔍 Ответы на ваши вопросы по работе одного слота
+### 🔍 Ответы на вопросы по работе одного слота
 
 1.  **Флинк/Дебезиум создают подписку автоматически?** — **ДА.** Когда вы в конфигурации Flink CDC указываете `'slot.name' = 'flink_slot'`, коннектор при запуске:
     *   Проверяет, существует ли слот с таким именем.
@@ -136,3 +136,75 @@ flowchart TD
 5.  **Сгруппируйте таблицы логически** (по модулю, частоте изменений) в публикации.
 
 Теперь у вас есть четкая схема. Пробуйте создать две тестовые публикации (например, `pub_test1` на 2 таблицы и `pub_test2` на 2 другие) и два отдельных источника во Flink, чтобы увидеть, как они работают независимо.
+
+Отличное замечание! Вы столкнулись с ключевым ограничением версий. **Поддержка `publication.name` появилась только в `flink-connector-postgres-cdc` версии 2.4.0.** В более ранних версиях (2.3.x, 2.2.x) этого параметра действительно нет, и коннектор управляет публикацией автоматически.
+
+Вот варианты действий:
+
+### 🔍 1. Проверьте версию коннектора
+
+Узнайте, какая версия используется. Посмотрите в папке `lib/` вашего Flink на файл `flink-connector-postgres-cdc-*.jar`.
+
+*   **Если версия < 2.4.0**: переходите к вариантам ниже.
+*   **Если версия ≥ 2.4.0**: возможно, синтаксис немного изменился. Попробуйте с двойными кавычками или полным путём:
+    ```sql
+    'publication.name' = 'my_publication'
+    -- или
+    'debezium.publication.name' = 'my_publication'
+    ```
+
+### 🛠️ 2. Варианты работы со старыми версиями (< 2.4.0)
+
+#### ✅ **Вариант А (Рекомендуемый): Чтение всей базы с фильтрацией**
+
+Коннектор создаст одну публикацию (по умолчанию `dbz_publication`) на все таблицы БД, но вы можете фильтровать данные уже во Flink через `table-name` и `WHERE`.
+
+```sql
+CREATE TABLE pg_cdc_source (
+  -- все поля ваших таблиц
+) WITH (
+  'connector' = 'postgres-cdc',
+  'slot.name' = 'flink_slot_1', -- Уникальный слот для этого задания
+  'database-name' = 'your_db',
+  'schema-name' = 'public',
+  'table-name' = '(users|orders|products).*', -- Regex на таблицы модуля 1
+  'debezium.slot.drop.on.stop' = 'false',
+  'scan.startup.mode' = 'initial'
+);
+```
+**Недостаток**: Один слот и одна публикация на все таблицы, что может создавать нагрузку.
+
+#### ⚠️ **Вариант Б (Рискованный): Использование `debezium` префикса**
+
+Некоторые параметры Debezium можно передать с префиксом, но это **не гарантирует работу**:
+```sql
+'debezium.publication.name' = 'my_pub',
+'debezium.publication.autocreate.mode' = 'filtered'
+```
+Этот подход недокументирован для старых версий Flink CDC и может привести к ошибкам.
+
+#### ✅ **Вариант В (Надежный): Обновление коннектора**
+
+**Лучший долгосрочный вариант** — обновить `flink-connector-postgres-cdc` до версии **2.4.0 или выше**. Это даст полный контроль над публикациями.
+
+### 📊 Сравнение вариантов
+
+| Вариант | Необходимость обновления | Контроль над публикациями | Рекомендация для продакшена |
+| :--- | :--- | :--- | :--- |
+| **А. Фильтрация в коннекторе** | Нет | Нет (одна общая `dbz_publication`) | Подходит для тестов и небольших БД |
+| **Б. Префикс `debezium.*`** | Нет | Частичный (не гарантировано) | Не рекомендуется, возможна нестабильность |
+| **В. Обновление коннектора** | **Да** | **Полный** | **Настоятельно рекомендуется** для 200-300 таблиц |
+
+### 🎯 Рекомендация
+
+Для вашей задачи с **200-300 таблицами** и желанием разбить их на **5-10 логических групп**:
+
+1.  **Сначала проверьте версию**. Если это 2.3.x — временно используйте **Вариант А**, создав несколько заданий Flink, каждое с уникальным `slot.name` и своим regex в `table-name`. Например:
+    *   Задание 1: `'table-name' = '(user|role|profile).*'`, `'slot.name' = 'slot_group1'`
+    *   Задание 2: `'table-name' = '(order|payment|invoice).*'`, `'slot.name' = 'slot_group2'`
+
+2.  **Запланируйте обновление до версии 2.4.0+**. Это решит проблему кардинально и позволит создать отдельные публикации в PostgreSQL для каждой группы таблиц, что является правильной архитектурой.
+
+3.  **Мониторьте отставание слотов** даже при использовании одного слота на задание. Помните, что удалять "зависшие" слоты (`pg_drop_replication_slot`) при остановке заданий **все равно придется вручную**, если `debezium.slot.drop.on.stop = 'false'`.
+
+
