Update 006 Конфигурирование слотов и публикаций в варианте ресурсного разделения подписок.md

--- a/001 Администрирование/007 Репликация/Logical replication/Матчасть/Slot vs publication vs subscription/006 Конфигурирование слотов и публикаций в варианте ресурсного разделения подписок.md
+++ b/001 Администрирование/007 Репликация/Logical replication/Матчасть/Slot vs publication vs subscription/006 Конфигурирование слотов и публикаций в варианте ресурсного разделения подписок.md
@@ -137,7 +137,8 @@ flowchart TD
 
 Теперь у вас есть четкая схема. Пробуйте создать две тестовые публикации (например, `pub_test1` на 2 таблицы и `pub_test2` на 2 другие) и два отдельных источника во Flink, чтобы увидеть, как они работают независимо.
 
-Отличное замечание! Вы столкнулись с ключевым ограничением версий. **Поддержка `publication.name` появилась только в `flink-connector-postgres-cdc` версии 2.4.0.** В более ранних версиях (2.3.x, 2.2.x) этого параметра действительно нет, и коннектор управляет публикацией автоматически.
+# Поддержка `publication.name`
+**Поддержка `publication.name` появилась только в `flink-connector-postgres-cdc` версии 2.4.0.** В более ранних версиях (2.3.x, 2.2.x) этого параметра действительно нет, и коннектор управляет публикацией автоматически.
 
 Вот варианты действий:
 
