Update 006 Конфигурирование слотов и публикаций в варианте ресурсного разделения подписок.md

--- a/001 Администрирование/007 Репликация/Logical replication/Матчасть/Slot vs publication vs subscription/006 Конфигурирование слотов и публикаций в варианте ресурсного разделения подписок.md
+++ b/001 Администрирование/007 Репликация/Logical replication/Матчасть/Slot vs publication vs subscription/006 Конфигурирование слотов и публикаций в варианте ресурсного разделения подписок.md
@@ -179,7 +179,7 @@ CREATE TABLE pg_cdc_source (
 
 Некоторые параметры Debezium можно передать с префиксом, но это **не гарантирует работу**:
 ```sql
-'debezium.publication.name' = 'my_pub',
+'debezium.publication.name' = 'my_pub',   <-- это работает
 'debezium.publication.autocreate.mode' = 'filtered'
 ```
 Этот подход недокументирован для старых версий Flink CDC и может привести к ошибкам.
